Bug 384452 - KTorrent does not recognize directories when creating .torrent file
Summary: KTorrent does not recognize directories when creating .torrent file
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Joris Guisson
URL: https://phabricator.kde.org/D11728
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-07 00:11 UTC by hotmusicfan
Modified: 2019-02-17 20:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description hotmusicfan 2017-09-07 00:11:54 UTC
Hello!
I've tried to create a .torrent with KTorrent but it seems impossible.
1. UI says "File or directory to create torrent from" but actually it allows adding only directories (folders)
2. Actually the only recognized folder is user's /home; When I reach to my prepared folder (for example /home/<username>/Desktop/<folder_name> it can "see" only /home/<username>/.
Comment 1 Rik Mills 2018-01-01 11:16:03 UTC
Also seemly the same or similar issue reported at:

https://bugs.launchpad.net/ubuntu/+source/ktorrent/+bug/1740737
Comment 2 Andrius Štikonas 2019-02-17 20:04:52 UTC
Git commit dab5abcd2172155c511e0666d867c37382829226 by Andrius Štikonas, on behalf of Jiva Totin.
Committed on 17/02/2019 at 20:00.
Pushed by stikonas into branch 'master'.

Allow creating torrent for a single file.

Added 2 new radio buttons. One for choosing directory and the other one for
choosing files.
Differential Revision: https://phabricator.kde.org/D11728

M  +17   -1    ktorrent/dialogs/torrentcreatordlg.cpp
M  +3    -0    ktorrent/dialogs/torrentcreatordlg.h
M  +38   -18   ktorrent/dialogs/torrentcreatordlg.ui

https://commits.kde.org/ktorrent/dab5abcd2172155c511e0666d867c37382829226