Allow creating torrent for a single file.

Added 2 new radio buttons. One for choosing directory and the other one for
choosing files.

BUG: 384452
Differential Revision: https://phabricator.kde.org/D11728